--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,44 @@
-# Node modules
+############################
+# Node / Package managers
+############################
 node_modules/
-
-# Environment variables
-.env
-.env.local
-.env.production
-
-# Logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# OS files
-.DS_Store
-Thumbs.db
+############################
+# Environment variables
+############################
+.env
+.env.*
+Backend/.env
+Frontend/.env
+Frontend/.env.*
 
-# Build folders
+############################
+# Build outputs
+############################
 dist/
 build/
+Frontend/dist/
+Frontend/build/
 
-# IDE files
+############################
+# Logs
+############################
+logs/
+*.log
+
+############################
+# OS / Editor files
+############################
+.DS_Store
+Thumbs.db
 .vscode/
 .idea/
+
+############################
+# Optional: lock files (keep if you want)
+############################
+# package-lock.json
+# yarn.lock
